# elastic-converational-VoIP-agent-core

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test_websocket.py
docker/: Dockerfile.api  Dockerfile.worker  custom-entrypoint.sh  prometheus.yml
docker/temporal-config/: development-sql.yaml  elasticsearch-settings.json
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  QUICKSTART.md  TROUBLESHOOTING.md  VAD_CONFIGURATION.md  architecture-diagrams.md
migrations/: env.py
migrations/versions/: 98815fe2ec48_add_call_metrics_table.py  b88491b78a30_add_call_metrics_table.py  f81484ed308c_initial_schema_for_voice_ai_system.py
scripts/: entrypoint.sh  monitor.sh  start-dev.sh  start-full.sh  stop-dev.sh  test-health.sh
src/voice_ai_system/: __init__.py  config.py  worker.py
src/voice_ai_system/activities/: __init__.py  database_activities.py  metrics_activities.py  session_activities.py  twilio_activities.py
src/voice_ai_system/api/: main.py
src/voice_ai_system/api/routes/: calls.py  health.py  twilio.py
src/voice_ai_system/models/: call.py  database.py
src/voice_ai_system/services/: audio_bridge.py  database.py  temporal_client.py
src/voice_ai_system/utils/: audio.py  logging.py  redis_client.py
src/voice_ai_system/workflows/: __init__.py  call_workflow.py
tests/: __init__.py  test_api_calls.py  test_audio_bridge.py  test_audio_bridge_session.py  test_audio_conversion.py  test_call_workflow.py  test_imports.py  test_integration_audio.py  test_integration_websocket.py  test_websocket_routes.py
