[project]
name = "voice-ai-system"
version = "0.1.0"
description = "Voice AI system with Twilio, Google Gemini Live API, and Temporal orchestration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    # Temporal workflow orchestration
    "temporalio>=1.6.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    # Redis for session state
    "redis[hiredis]>=5.0.0",
    # Twilio (with async support)
    "twilio>=9.0.0",
    "aiohttp>=3.9.0",  # For AsyncTwilioHttpClient
    # Google Gemini (unified Gen AI SDK)
    "google-genai>=1.0.0",
    "google-auth>=2.27.0",
    # Audio processing
    "pydub>=0.25.1",
    "soxr>=0.3.7",
    "numpy>=1.26.3",
    "scipy>=1.11.0",
    # Utilities
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    # Logging and monitoring
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    # Data validation
    "phonenumbers>=8.13.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
